# dagpiler

./: .sesskey  404.html  README.md  Spr23TWW_OA_AllSubjects_032323.xlsx  dag.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Packaging/bridging_packages/: index.html
Packaging/creating_packages/: index.html
Packaging/folder_structure/: index.html
Packaging/installing_packages/: index.html
Packaging/plot/: index.html
Packaging/plot_component/: index.html
Packaging/process/: index.html
Packaging/publishing_packages/: index.html
Packaging/toml_files/: index.html
commands/commands/: index.html
dag_structure/: index.html
dev_blog/: index.html
dev_blog/2024-10-02/: index.html
dev_blog/2024-10-03/: index.html
dev_blog/2024-10-05/: index.html
dev_blog/2024-10-14/: index.html
docs/: .pages  index.md  package_design.md  philosophy.md  publishing_packages.md  terms.md  toml_files.md
docs/Packaging/: .pages  bridging_packages.md  creating_packages.md  folder_structure.md  installing_packages.md  process.md  publishing_packages.md  toml_files.md
docs/commands/: commands.md
package_design/: index.html
philosophy/: index.html
publishing_packages/: index.html
search/: search_index.json
src/Package-DAG-Compiler/: dag.py
src/dagpiler/: __init__.py  __main__.py  compile_dag.py  config_reader.py  constants.py  core.py  graph.js  init.py  read_and_compile_dag.py  test_cytoscape.py  visualize_dag.py
src/package_dag_compiler/: __init__.py  (+9 more)
templates/: index.html
terms/: index.html
tests/: test_main.py
toml_files/: index.html
(+44 files in other folders)
