[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "dagpiler"
version = '0.1.0'
description = 'Create a DAG representation of a data processing pipeline from TOML files.'
authors = [{name = "Mitchell Tillman", email ="mtillman14@gmail.com"}]
dependencies = []

# [project.scripts]
# dag = "package_dag_compiler.cli:app"

# [tool.hatch.build]
# include = [
#     "src/package_dag_compiler/**"
# ]