[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "dagpiler"
version = '0.1.0'
description = 'Compile a DAG representation of a data processing pipeline from TOML files.'
authors = [{name = "Mitchell Tillman", email ="mtillman14@gmail.com"}]
dependencies = []

[project.scripts]
dagpiler = "dagpiler.__main__:main"